AP-8593: More intuitive paradigm to edit and move annotations
- Using Johannes' icons for toolbar and mouseover of annotations in NE mode
- Pushing change so i can rebase to keep minimally divergent with master
- Ensuring mode switching on node and annotation paste from clipboard, as necessary
- Ensuring mode switching on drag and drop of nodes from favorites and repository views, as necessary
- Ensuring mode switching on 'add metanode wizard' usage, as necessary
- Ensuring uniform 'deactive' color setting on elements in the 'node layer' when in AE mode
- Ensuring elements in the non active mode layer (nodes, connections, ports are in the NE mode layer, annotations in the AE mode layer) are not subject to mouse interaction
- Adding transparency to the node background in AE mode and changing the header label to gray
- Added hotkey (MOD1 + SHIFT + M)
- Moving annotation mode edit pencil icon 2px down and 2px right
- Fix for marquee drag selection originating inside the bounds of an annotation while in NE mode
- Node backgrounds in AE mode are no longer rendered with any translucency
- "Double-click top left corner to edit." text is no longer populated
- Double click on a node while in AE mode now switches to NE mode

AP-8593 (More intuitive paradigm to edit and move annotations)
https://knime-com.atlassian.net/browse/AP-8593

--- a/org.knime.workbench.editor/plugin.xml
+++ b/org.knime.workbench.editor/plugin.xml
@@ -15,6 +15,11 @@
             name="Workflow Editor Settings..."/>
       <command
             categoryId="knime.command.category"
+            description="Toggles the edit mode between Annotation Edit and Node Edit"
+            id="knime.commands.editor.toggleEditorMode"
+            name="Toggle Editor Mode"/>
+      <command
+            categoryId="knime.command.category"
             description="Toggles the snap to grid behavior of the workflow editor"
             id="knime.commands.editor.toggleGrid"
             name="Toggle Snap to Grid"/>
@@ -417,10 +422,21 @@
                icon="icons/editor_UI_settings_16.png"
                id="org.knime.workbench.editor.actions.gridSettings"
                label="Workflow Editor Settings..."
-               menubarPath="org.knime.workbench.editor.menu/group2"
+               menubarPath="org.knime.workbench.editor.menu/group1"
                style="push"
-               toolbarPath="org.knime.workbench.editor.menu/group2"
+               toolbarPath="org.knime.workbench.editor.menu/group1"
                tooltip="Open the settings dialog for the workflow editor"/>
+         <action
+               class="org.knime.workbench.editor2.actions.delegates.ToggleEditorModeEditorAction"
+               definitionId="knime.commands.editor.toggleEditorMode"
+               disabledIcon="icons/anno_edit_mode.png"
+               icon="icons/anno_edit_mode.png"
+               id="org.knime.workbench.editor.actions.toggleEditorMode"
+               label="Toggle Editor Mode"
+               menubarPath="org.knime.workbench.editor.menu/group1"
+               style="push"
+               toolbarPath="org.knime.workbench.editor.menu/group1"
+               tooltip="Toggle the edit mode between Annotation Edit and Node Edit"/>
          <action
                class="org.knime.workbench.editor2.actions.delegates.ToggleGridEditorAction"
                definitionId="knime.commands.editor.toggleGrid"
@@ -517,6 +533,11 @@
             contextId="org.eclipse.ui.contexts.window"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M1+SHIFT+ALT+X"/>
+      <key
+            commandId="knime.commands.editor.toggleEditorMode"
+            contextId="org.eclipse.ui.contexts.window"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+SHIFT+M"/>            
       <key
             commandId="knime.commands.editor.toggleGrid"
             contextId="org.eclipse.ui.contexts.window"
